# simplipy-backend

./: Dockerfile  deploy.sh  pyproject.toml
simplipy/: main.py
simplipy/ctf/: ctf.py  helper.py  stf.py
simplipy/parse/: expression.py  instruction.py  parse.py  statement.py  types.py
simplipy/semantics/: state.py  types.py
simplipy/simplify/: simplify.py
tests/: test_ctf.py  test_encl.py  test_run.py
tests/test_files/: a.py  b.py
