[project]
name = "simplipy"
version = "0.1.0"
description = ""
authors = [{ name = "PraneethJain", email = "praneethjain005@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["rich (>=13.9.4,<14.0.0)", "fastapi[standard] (>=0.115.11,<0.116.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

